Get non terminated contracts of a given user
