# openapi.json
@@ -80,6 +80,35 @@
           }
         }
       }
+    },
+    "/contracts": {
+      "get": {
+        "description": "Returns a list of non terminated contracts belonging to a user (client or contractor)",
+        "parameters": [
+          {
+            "in": "header",
+            "name": "profile_id",
+            "required": true,
+            "description": "Identifier of the profile that owns the contract",
+            "schema": { "type": "integer" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of contracts",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type":"array",
+                  "items": {
+                    "$ref": "#/components/schemas/Contract"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
 
   }
